--- a/MultiScaleWPF/MainWindow.xaml
+++ b/MultiScaleWPF/MainWindow.xaml
@@ -88,19 +88,18 @@
                     <RadioButton x:Name="squareInclusionButton" Content="Square" IsChecked="True" Checked="squareInclusionButton_Checked" HorizontalAlignment="Left"/>
                     <RadioButton x:Name="CircleInclusionButton" Content="Circle" Checked="CircleInclusionButton_Checked" HorizontalAlignment="Left"/>
                 </StackPanel>
-                <Separator/>
                 <StackPanel HorizontalAlignment="Center">
-                    <Label x:Name="label7" Content="Energy type"/>
+                    <Label x:Name="label7" Content="Operation type"/>
                 </StackPanel>
                 <StackPanel>
-                    <RadioButton x:Name="heterogenousButton" Content="Heterogenous" IsChecked="True" Checked="heterogenousButton_Checked" HorizontalAlignment="Left"/>
-                    <RadioButton x:Name="homogenousButton" Content="Homogenous" Checked="homogenousButton_Checked" HorizontalAlignment="Left"/>
+                    <RadioButton x:Name="substructureButton" Content="Substructure" IsChecked="True" HorizontalAlignment="Left" Checked="substructureButton_Checked"/>
+                    <RadioButton x:Name="dualPhaseButton" Content="Dual-Phase" HorizontalAlignment="Left" Checked="dualPhaseButton_Checked"/>
                 </StackPanel>
                 <Separator/>
                 <Button x:Name="startButton" Content="Start" Width="50" HorizontalAlignment="Center" Click="startButton_Click"/>
                 <Button x:Name="stopButton" Content="Stop" Width="50" HorizontalAlignment="Center" Click="stopButton_Click"/>
                 <Button x:Name="resetButton" Content="Reset" Width="50" HorizontalAlignment="Center" Click="resetButton_Click"/>
-
+                
             </StackPanel>
             <Canvas Name="PaintSurface" MouseDown="Canvas_MouseDown_1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <Canvas.Background>
